@@ -1,89 +1,83 @@
- /*
-  * TeleStax, Open Source Cloud Communications
-  * Copyright 2011-2016, TeleStax Inc. and individual contributors
-  * by the @authors tag.
-  *
-  * This program is free software: you can redistribute it and/or modify
-  * under the terms of the GNU Affero General Public License as
-  * published by the Free Software Foundation; either version 3 of
-  * the License, or (at your option) any later version.
-  *
-  * This program is distributed in the hope that it will be useful,
-  * but WITHOUT ANY WARRANTY; without even the implied warranty of
-  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  * GNU Affero General Public License for more details.
-  *
-  * You should have received a copy of the GNU Affero General Public License
-  * along with this program.  If not, see <http://www.gnu.org/licenses/>
-  *
-  * This file incorporates work covered by the following copyright and
-  * permission notice:
-  *
-  *   JBoss, Home of Professional Open Source
-  *   Copyright 2007-2011, Red Hat, Inc. and individual contributors
-  *   by the @authors tag. See the copyright.txt in the distribution for a
-  *   full listing of individual contributors.
-  *
-  *   This is free software; you can redistribute it and/or modify it
-  *   under the terms of the GNU Lesser General Public License as
-  *   published by the Free Software Foundation; either version 2.1 of
-  *   the License, or (at your option) any later version.
-  *
-  *   This software is distributed in the hope that it will be useful,
-  *   but WITHOUT ANY WARRANTY; without even the implied warranty of
-  *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
-  *   Lesser General Public License for more details.
-  *
-  *   You should have received a copy of the GNU Lesser General Public
-  *   License along with this software; if not, write to the Free
-  *   Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
-  *   02110-1301 USA, or see the FSF site: http://www.fsf.org.
-  */
+/*
+ * TeleStax, Open Source Cloud Communications
+ * Copyright 2011-2016, TeleStax Inc. and individual contributors
+ * by the @authors tag.
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * under the terms of the GNU Affero General Public License as
+ * published by the Free Software Foundation; either version 3 of
+ * the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>
+ *
+ * This file incorporates work covered by the following copyright and
+ * permission notice:
+ *
+ *   JBoss, Home of Professional Open Source
+ *   Copyright 2007-2011, Red Hat, Inc. and individual contributors
+ *   by the @authors tag. See the copyright.txt in the distribution for a
+ *   full listing of individual contributors.
+ *
+ *   This is free software; you can redistribute it and/or modify it
+ *   under the terms of the GNU Lesser General Public License as
+ *   published by the Free Software Foundation; either version 2.1 of
+ *   the License, or (at your option) any later version.
+ *
+ *   This software is distributed in the hope that it will be useful,
+ *   but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
+ *   Lesser General Public License for more details.
+ *
+ *   You should have received a copy of the GNU Lesser General Public
+ *   License along with this software; if not, write to the Free
+ *   Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ *   02110-1301 USA, or see the FSF site: http://www.fsf.org.
+ */
 
- package org.jdiameter.common.impl.concurrent;
+package org.jdiameter.common.impl.concurrent;
 
- import org.slf4j.Logger;
- import org.slf4j.LoggerFactory;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadFactory;
 
- import java.util.concurrent.ExecutorService;
- import java.util.concurrent.Executors;
- import java.util.concurrent.ThreadFactory;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
- /**
-  * @author <a href="mailto:brainslog@gmail.com"> Alexandre Mendonca </a>
-  * @author <a href="mailto:baranowb@gmail.com"> Bartosz Baranowski </a>
-  */
- @SuppressWarnings("all")//3rd party lib
- class BaseThreadFactory implements ThreadFactory
- {
-	 private static final Logger log = LoggerFactory.getLogger(BaseThreadFactory.class);
-	 public static final String ENTITY_NAME = "ThreadPool";
+/**
+ * @author <a href="mailto:brainslog@gmail.com"> Alexandre Mendonca </a>
+ * @author <a href="mailto:baranowb@gmail.com"> Bartosz Baranowski </a>
+ */
+@SuppressWarnings("all") //3rd party lib
+class BaseThreadFactory implements ThreadFactory {
+    private static final Logger log = LoggerFactory.getLogger(BaseThreadFactory.class);
+    public static final String ENTITY_NAME = "ThreadPool";
 
-	 private ExecutorService threadPoolExecutor;
+    private ExecutorService threadPoolExecutor;
 
-	 BaseThreadFactory(boolean useVirtualThreads)
-	 {
-		 if (useVirtualThreads) {
-			 log.info("Using virtual thread pool executor");
-			 this.threadPoolExecutor = Executors.newVirtualThreadPerTaskExecutor();
-		 }
-		 else {
-			 log.info("Using cached thread pool executor");
-			 this.threadPoolExecutor = Executors.newCachedThreadPool();
-		 }
+    BaseThreadFactory(boolean useVirtualThreads) {
+        if (useVirtualThreads) {
+            log.info("Using virtual thread pool executor");
+            this.threadPoolExecutor = Executors.newVirtualThreadPerTaskExecutor();
+        } else {
+            log.info("Using cached thread pool executor");
+            this.threadPoolExecutor = Executors.newCachedThreadPool();
+        }
 
-	 }
+    }
 
-	 public ExecutorService getThreadPool()
-	 {
-		 return this.threadPoolExecutor;
-	 }
+    public ExecutorService getThreadPool() {
+        return this.threadPoolExecutor;
+    }
 
-	 @Override
-	 public Thread newThread(Runnable runnable)
-	 {
-		 return null;
-	 }
+    @Override
+    public Thread newThread(Runnable runnable) {
+        return null;
+    }
 
-
- }
+}
